<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NMedia</string>
    <string name="center_text">NMedia</string>
    <string name="button">Button</string>
    <string name="post_avatar">Post avatar</string>
    <string name="author_avatar">Author avatar</string>
    <string name="menu">menu</string>
    <string name="likes">likes</string>
    <string name="share">share</string>
    <string name="views">views</string>
    <string name="menu_remove">remove</string>
    <string name="save">save</string>
    <string name="error_empty_content">error</string>
    <string name="type_content">type_some_content</string>
    <string name="menu_edit">edit</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="watch_video">watch</string>
    <string name="add_post">Add post</string>
    <string name="channel_like_name" >Add post</string>
    <string name="channel_newPost_name" >Add post</string>
    <string name="channel_like_description">Add post</string>
    <string name="channel_new_post_description" >Add post</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post" >Add post</string>
    <string name="channel_remote_name" >Add post</string>
    <string name="channel_remote_description" >Add post</string>
    <string name="msg_token_fmt" >Add post</string>
</resources>