<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:contentDescription="@string/author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/AppCheckBox"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:backgroundTint="@color/ic_launcher_background"
        android:contentDescription="@string/menu"
        android:button="@drawable/ic_more_selector"
        app:icon="@drawable/ic_more_selector"
        app:iconSize="16dp"
        app:iconTint="@color/color_more"
        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        tools:checked="true"
        tools:text=""/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier_content"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/AppCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@color/design_default_color_background"
        android:button="@drawable/ic_like_selector"
        android:contentDescription="@string/likes"
        app:icon="@drawable/ic_like_selector"
        app:iconSize="16dp"
        app:iconTint="@color/color_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        tools:checked="true"
        tools:text="_1K"
        tools:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/AppCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:button="@drawable/ic_share_selector"
        android:background="@color/design_default_color_background"
        android:contentDescription="@string/share"
        app:icon="@drawable/ic_share_selector"
        app:iconTint="@color/color_share"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/likes"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:checked="true"
        tools:text="_1K" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/AppCheckBox"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:background="@color/design_default_color_background"
        android:button="@drawable/ic_baseline_visibility_24"
        android:contentDescription="@string/views"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:iconTint="@color/color_share"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toStartOf="@id/views_count"
        app:layout_constraintTop_toTopOf="@id/likes"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        tools:layout_editor_absoluteX="156dp" />


    <TextView
        android:id="@+id/views_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/views"
        tools:text="@sample/posts.json/data/visibility" />


</androidx.constraintlayout.widget.ConstraintLayout>